<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_shape"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="85dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <RelativeLayout
        android:id="@+id/content_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <View
            android:id="@+id/view"
            android:layout_width="30dp"
            android:layout_height="5dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/swipe_up_handle" />


        <LinearLayout
            android:id="@+id/userDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivPhoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/person" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:gravity="start|center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="Full Name"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="start|center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/lato"
                    android:gravity="start|center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/email"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="start|center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/layout_more_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:fontFamily="@font/lato"
                        android:gravity="start|center"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/gender"
                        android:textColor="@color/light_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="start|center"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:fontFamily="@font/lato"
                        android:gravity="start|center"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/dateOfBirth"
                        android:textColor="@color/light_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/dob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="start|center"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:fontFamily="@font/lato"
                        android:gravity="start|center"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/RegistrationDate"
                        android:textColor="@color/light_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/reg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="start|center"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:fontFamily="@font/lato"
                        android:gravity="start|center"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/UserLocation"
                        android:textColor="@color/light_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="start|center"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>